--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: atomic_webview
 description: "Atomic Webview is cross platform webview for android, ios, linux, macos, web, windows"
-version: 0.0.4
+version: 0.0.5
 homepage: https://github.com/Yoda-Man/atomic_webview
 
 platforms:
@@ -12,7 +12,7 @@ platforms:
   web:
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.6.2
   flutter: ">=1.17.0"
 
 dependencies:
@@ -20,21 +20,21 @@ dependencies:
     sdk: flutter
   path: ^1.9.0
   universal_io: ^2.2.0
-  webview_flutter: ^4.8.0
-  webview_flutter_android: ^3.16.6
-  webview_flutter_web: ^0.2.3+2
-  webview_flutter_wkwebview: ^3.14.0    
+  webview_flutter: ^4.10.0
+  webview_flutter_android: ^4.3.2
+  webview_flutter_web: ^0.2.3+4
+  webview_flutter_wkwebview: ^3.18.0    
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-flutter:
+# flutter:
 
   # To add assets to your package, add an assets section, like this:
   # assets:
