--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -7,7 +7,11 @@ project(${PROJECT_NAME} LANGUAGES CXX)
 set(PLUGIN_NAME "atomic_webview_plugin")
 
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(WebKit REQUIRED IMPORTED_TARGET webkit2gtk-4.0)
+# From Ubuntu 20.04 only have webkit2gtk-4.1
+pkg_check_modules(WebKit IMPORTED_TARGET webkit2gtk-4.1)
+if (NOT WebKit_FOUND)
+  pkg_check_modules(WebKit REQUIRED IMPORTED_TARGET webkit2gtk-4.0)  # for backward compatibility
+endif ()
 
 add_library(${PLUGIN_NAME} SHARED
         "atomic_webview_plugin.cc"
